# trs2cs

./: LICENSE  README.md  stack-head.yaml  stack.yaml  trs2cs.cabal
app/: Main.hs
