name:                trs2cs
version:             0.0.0.0
-- synopsis:
-- description:         
homepage:            https://github.com/ComputationWithBoundedResources/trs2cs#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
copyright:           Copyright: (c) 2016 Michael Schaper
category:            Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable trs2cs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       
    base, containers, mtl,
    term-rewriting, tct-trs, gubs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ComputationWithBoundedResources/trs2cs

